# oracle

./: .dockerignore  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  eval.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  ruff.toml  run_local.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: citation_formatter.py  code_exec_agent.py  fact_check_logic.py  fact_check_pass.py  fact_check_subtask_agent.py  graph.py  human_review.py  pdf_agent.py  prompts.py  schemas.py  state.py  supervisor.py  synthesis_agent.py  utils.py  web_search_agent.py
backend/app/api/: routes_reports.py  routes_research.py  schemas.py
backend/app/core/: embeddings.py  llm.py  logging_config.py
backend/app/db/: crud.py  models.py  session.py
backend/app/tasks/: celery_app.py  research_tasks.py
backend/app/tools/: code_exec_tool.py  crossref_tool.py  pdf_tools.py  vector_store.py  web_search_tool.py
backend/eval/: dataset.json  evaluators.py  run_eval.py  target.py
backend/tests/: conftest.py  test_citation_formatter.py  test_code_exec_tool.py  test_eval_evaluators.py  test_graph_structure.py  test_llm_parsing.py
docs/: DEPLOYMENT.md  GET_API_KEYS.md  PROJECT_OVERVIEW.md  RUNNING_BACKEND.md  RUNNING_EVALUATION.md  RUNNING_FRONTEND.md  RUNNING_LOCALLY.md
frontend/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/research/[sessionId]/: page.tsx
frontend/components/: ActivityLog.tsx  AgentWireBoard.tsx  ConfidenceGauge.tsx  FeedbackForm.tsx  PlanReview.tsx  QueryForm.tsx  ReportView.tsx  StatusBadge.tsx
frontend/lib/: api.ts  types.ts  useResearchStream.ts
